# wirelessAgent_backend

./: .env.example  CLAUDE.md  README.md  RayTracing_cqi.py  api_server.py  backend_server.py  feature_list.json  init.sh  install_frontend.bat  progress_log.md  pyproject.toml  ray_tracing_results.csv  requirements-dev.txt  requirements.txt  start.bat  test_all_apis.py  test_api.py  test_data.csv  test_data_small.csv  test_f004_services.py
.claude/: config.json  settings.json  settings.local.json
.claude/agents/: coding-agent.md  initializer-agent.md
.trae/: config.json
.trae/rules/: project_rules.md
app/: __init__.py  main.py
app/api/v1/: router.py
app/api/v1/endpoints/: allocations.py  intent.py  network.py
app/core/: config.py
app/models/: __init__.py  enums.py  network.py  request.py  user.py
app/services/: __init__.py  intent_understanding.py  network_slicing.py  resource_calculator.py  state_manager.py
no_knowledge_base/: WA_DS_V3_NKB.py  detail_NKB.md  network_slicing_results_DSv3NKB.csv
tests/: conftest.py
wirelessagent-frontend/: README_CN.md  USER_GUIDE.md  index.html  package-lock.json  package.json
wirelessagent-frontend/src/: App.vue  style.css
wirelessagent-frontend/src/components/: FileUpload.vue  ProcessLog.vue  ResultsDisplay.vue  VersionTag.vue
wirelessagent-frontend/src/services/: api.ts
with_knowledge_base/: Intent_Understand.txt  WA_DS_V3_KB.py  detail_KB.md  network_slicing_results_DSv3KB.csv
